--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -82,7 +82,7 @@ body {
 }
 
 .dropdown:hover {
-    background-color: red;
+    background-color: whitesmoke;
     border-radius: 6px;
 }
 
@@ -120,7 +120,7 @@ body {
 .dropdown__item {
     text-transform: uppercase;
     cursor: pointer;
-    background-color: red;
+    background-color: whitesmoke;
     text-align: center;
     transition: background-color 0.2s linear;
 }
@@ -137,13 +137,13 @@ body {
     left: 20px;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-    border-bottom: 10px solid red;
+    border-bottom: 10px solid whitesmoke;
     transform: translateY(-100%);
     transition: boder-color 0.2s linear;
 }
 
 .dropdown__item:first-child:hover::before {
-    border-bottom-color: cyan;
+    border-bottom-color: #189eff;
 }
 
 .dropdown__item:last-child {
@@ -151,10 +151,11 @@ body {
 }
 
 .dropdown__item:hover {
-    background-color: cyan;
+    background-color: #189eff;
 }
 
 a.dropdown__text {
+    color: #000000;
     text-decoration: none;
 }
 
@@ -193,4 +194,16 @@ a.dropdown__text {
     outline-style: none;
     outline-width: 0;
     border-radius: 10px 0 0 0;
+}
+
+.cart {
+    padding-left: 5px;
+    padding-right: 5px;
+    color: #000000;
+    text-decoration: none;
+}
+
+.cart:hover {
+    text-decoration: none;
+    color: #189eff;
 }
